<resources>
    <string name="app_name">MicrowaveApp</string>
    <string name="action_settings">Settings</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="img_food">PictureOfFoodCooking</string>
    <string name="text_time">00:00</string>
    <string name="doneMessage">Done!</string>
</resources>
