<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.dtcc.nhollowa.microwaveapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="horizontal"
    android:background="#363232">

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"

    android:contentDescription="@string/img_food"
    android:src="@drawable/ic_food"
    android:layout_gravity="center_vertical|start"
        android:scaleType="fitStart"
        android:minHeight="275dp"
        android:minWidth="275dp"
        android:maxHeight="325dp"
        android:maxWidth="325dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"

        android:id="@+id/tableLayout"

        android:gravity="center_vertical|end"
        android:layout_gravity="center_vertical"
        style="@android:style/Widget.Holo.Button.Borderless.Small">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_time"
                android:id="@+id/textView"
                android:layout_column="8"
                android:layout_span="3"
                android:gravity="end"
                android:background="@android:color/background_light"
                android:textSize="45sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            style="@android:style/Widget.Holo.Button.Borderless.Small">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_1"
                android:textSize="30sp"
                android:id="@+id/button1"
                android:layout_column="8"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_2"
                android:textSize="30sp"
                android:id="@+id/button2"
                android:layout_column="9"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_3"
                android:textSize="30sp"
                android:id="@+id/button3"
                android:layout_column="10"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            style="@android:style/Widget.Holo.Button.Borderless.Small">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_4"
                android:textSize="30sp"
                android:id="@+id/button4"
                android:layout_column="8"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_5"
                android:textSize="30sp"
                android:id="@+id/button5"
                android:layout_column="9"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_6"
                android:textSize="30sp"
                android:id="@+id/button6"
                android:layout_column="10"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_7"
                android:textSize="30sp"
                android:id="@+id/button7"
                android:layout_column="8"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_8"
                android:textSize="30sp"
                android:id="@+id/button8"
                android:layout_column="9"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_9"
                android:textSize="30sp"
                android:id="@+id/button9"
                android:layout_column="10"
                android:layout_span="3"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_0"
                android:textSize="25sp"
                android:id="@+id/button0"
                android:layout_column="8"
                android:layout_gravity="end"
                style="@android:style/Widget.Holo.Button.Borderless.Small" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start"
                android:textSize="25sp"
                android:id="@+id/buttonStart"
                android:layout_column="9"
                android:gravity="end" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_stop"
                android:textSize="25sp"
                android:id="@+id/buttonStop"
                android:layout_column="10"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
